# OnlineShoppingApp

./: .gitignore  README.md  TECHNICAL_DETAILS.md  pyproject.toml  requirements.txt  run.ps1
ai-search-service/scripts/: seed.py
ai-search-service/src/: app.py
src/: AccessoriesPage.java  AppState.java  Cart.java  CartItem.java  CartPage.java  Category.java  CategoryPage.java  CheckoutPage.java  ElectronicsPage.java  HomePage.java  ImageCache.java  OnlineShoppingApp.java  Product.java  ProductCatalog.java  RatingDialog.java  RedisClient.java  RoundedButton.java  RoundedPanel.java  SearchResultsPage.java  SortOrder.java  SportsPage.java  StateChangeListener.java  StationeryPage.java  Theme.java  ToastNotification.java  UIUtils.java  VectorStore.java  WishlistPage.java
