[project]
name = "vectorstore-ai-service"
version = "0.1.0"
description = "Semantic search microservice for the VectorStore E-Commerce app"
authors = [
    { name = "Aniket Shinde" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sentence-transformers>=2.2.0",
    "pinecone>=3.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["ai-search-service"]
